tests/integration/match/type-error/main.cx
data Wrapper a {
  Wrapped(a)
}

fun main() {
  match Wrapped("hi") {
    Wrapped(x) => x == 1
  }
}

let _ = main()
